--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^6.0.3",
     "@ng-bootstrap/ng-bootstrap": "^1.1.2",
     "@swimlane/ngx-datatable": "^13.0.0",
+    "@toverux/ngx-sweetalert2": "^4.0.0",
     "angular-calendar": "^0.22.1",
     "bootstrap": "^4.1.1",
     "chart.js": "^2.7.1",
@@ -42,8 +43,9 @@
     "pace-js": "^1.0.2",
     "popper.js": "^1.12.5",
     "rxjs": "^6.2.0",
-    "zone.js": "^0.8.4",
-    "rxjs-compat": "^6.0.0-rc.0"
+    "rxjs-compat": "^6.0.0-rc.0",
+    "sweetalert2": "^7.25.0",
+    "zone.js": "^0.8.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.5",
