--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@angular/router": "^6.0.3",
     "@ng-bootstrap/ng-bootstrap": "^1.1.2",
     "@ng-select/ng-select": "^2.3.3",
+    "@ngx-pwa/local-storage": "^6.0.0-rc.2",
     "@swimlane/ngx-datatable": "^13.0.0",
     "@toverux/ngx-sweetalert2": "^4.0.0",
     "angular-calendar": "^0.22.1",
+    "angular-local-storage": "^0.7.1",
     "bootstrap": "^4.1.1",
     "chart.js": "^2.7.2",
     "chartist": "^0.11.0",
